// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Email For Destroy User Controller Snapshot Test for email not verified. 1`] = `
{
  "body": {
    "message": "Email not verified, you can't delete it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Email For Destroy User Controller Snapshot Test for inactive user. 1`] = `
{
  "body": {
    "message": "Your account is blocked, you can't delete it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Email For Destroy User Controller Snapshot Test for otp request limit. 1`] = `
{
  "body": {
    "message": "OTP request exceed, try again later.",
    "success": false,
  },
  "status": 429,
}
`;

exports[`Email For Destroy User Controller Snapshot Test for server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while sending link.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Email For Destroy User Controller Snapshot Test for success. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "Test User",
      "userId": "123",
    },
    "message": "Verification OTP sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Email For Destroy User Controller Snapshot Test for user not found. 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;
